RESOLVED FIXED90919
Assertion ASSERTION FAILED: enclosingIntRect(rendererMappedResult) == enclosingIntRect(FloatQuad(result).boundingBox()) when compositing in paginated mode
https://bugs.webkit.org/show_bug.cgi?id=90919
Summary Assertion ASSERTION FAILED: enclosingIntRect(rendererMappedResult) == enclosi...
Simon Fraser (smfr)
Reported 2012-07-10 16:54:42 PDT
ASSERTION FAILED: enclosingIntRect(rendererMappedResult) == enclosingIntRect(FloatQuad(result).boundingBox()) Source/WebCore/rendering/RenderGeometryMap.cpp(85) : WebCore::FloatRect WebCore::RenderGeometryMap::absoluteRect(const WebCore::FloatRect &) const 1 0x409325a WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WebCore::RenderLayer*, WebCore::RenderLayerCompositor::OverlapMap*, WebCore::CompositingState&, bool&, bool&) 2 0x40936a5 WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WebCore::RenderLayer*, WebCore::RenderLayerCompositor::OverlapMap*, WebCore::CompositingState&, bool&, bool&) 3 0x40937c6 WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WebCore::RenderLayer*, WebCore::RenderLayerCompositor::OverlapMap*, WebCore::CompositingState&, bool&, bool&) 4 0x4092983 WebCore::RenderLayerCompositor::updateCompositingLayers(WebCore::CompositingUpdateType, WebCore::RenderLayer*) 5 0x3266312 WebCore::FrameView::updateCompositingLayersAfterLayout() 6 0x3268965 WebCore::FrameView::layout(bool)
Attachments
Patch (5.70 KB, patch)
2012-07-10 18:20 PDT, Simon Fraser (smfr)
no flags
Patch (5.71 KB, patch)
2012-07-10 18:34 PDT, Simon Fraser (smfr)
koivisto: review+
Simon Fraser (smfr)
Comment 1 2012-07-10 16:58:32 PDT
The old code would insert a step with isNonUniform=true when pushing the step from the RenderView to the <html>'s RenderBlock. The new code relies on layer->canUseConvertToLayerCoords(), which checks *this* layer for columns, not the layer of the container.
Simon Fraser (smfr)
Comment 2 2012-07-10 18:20:41 PDT
Gyuyoung Kim
Comment 3 2012-07-10 18:24:35 PDT
Early Warning System Bot
Comment 4 2012-07-10 18:26:28 PDT
Early Warning System Bot
Comment 5 2012-07-10 18:26:42 PDT
Gustavo Noronha (kov)
Comment 6 2012-07-10 18:27:44 PDT
Build Bot
Comment 7 2012-07-10 18:31:30 PDT
WebKit Review Bot
Comment 8 2012-07-10 18:31:48 PDT
Comment on attachment 151568 [details] Patch Attachment 151568 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13180252
Simon Fraser (smfr)
Comment 9 2012-07-10 18:34:16 PDT
Antti Koivisto
Comment 10 2012-07-11 12:07:00 PDT
Comment on attachment 151570 [details] Patch r=me
Simon Fraser (smfr)
Comment 11 2012-07-11 15:27:16 PDT
Note You need to log in before you can comment on or make changes to this bug.